--- a/app/src/main/res/layout/fragment_progressdialog.xml
+++ b/app/src/main/res/layout/fragment_progressdialog.xml
@@ -23,7 +23,7 @@
             android:max="100"
             android:layout_marginRight="12dip" />
 
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
